--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser-dynamic": "^16.1.0",
         "@angular/router": "^16.1.5",
         "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+        "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.0",
         "file-saver": "^2.0.5",
         "jquery": "^3.7.0",
